--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,6 @@
 @import './media.css';
 
 .hero {
-  display: none;
   padding-top: 142px;
   margin-top: -82px;
   background-color: var(--light-grey);
@@ -14,7 +13,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  gap: 60px;
+  gap: 50px;
   margin-bottom: 60px;
 }
 
@@ -65,7 +64,7 @@
   color: var(--white);
   font-family: Kollektif, sans-serif;
   font-size: 24px;
-  font-weight: 400;
+  font-weight: 600;
   text-transform: uppercase;
 }
 
@@ -78,8 +77,8 @@
 .hero__img::before {
   content: '';
   position: absolute;
-  left: -29px;
-  bottom: 78px;
+  left: -4%;
+  bottom: 16%;
   display: inline-block;
   width: 60px;
   height: 60px;
@@ -89,8 +88,8 @@
 .hero__img::after {
   content: '';
   position: absolute;
-  top: 106px;
-  right: -30px;
+  top: 21%;
+  right: -4%;
   display: inline-block;
   width: 62px;
   height: 62px;
@@ -104,6 +103,7 @@
 
 .hero__tabs {
   display: flex;
+  gap: 20px;
   justify-content: space-between;
 }
 
@@ -112,8 +112,10 @@
   text-align: center;
   justify-content: center;
   align-items: center;
-  width: 280px;
   height: 88px;
+  padding: 0 10px;
+  flex-basis: 280px;
+  flex-shrink: 1;
   color: var(--grey);
   font-family: Inter, sans-serif;
   font-size: 20px;
@@ -124,12 +126,236 @@
   white-space: pre-line;
 }
 
-@media (max-width: 1750px) {
+@media (max-width: 1660px) {
+  .hero__img::after {
+    top: 19%;
+  }
+}
+
+@media (max-width: 1560px) {
+  .hero__title {
+    font-size: 70px;
+  }
+
+  .hero__desc-text {
+    font-size: 28px;
+    max-width: 485px;
+  }
+
+  .hero__img::after {
+    top: 15%;
+  }
+
+  .hero__img::before {
+    bottom: 12%;
+  }
+}
+
+@media (max-width: 1455px) {
+  .hero__tabs {
+    gap: 15px;
+  }
+
+  .hero__tab {
+    font-size: 18px;
+  }
+
+  .hero__btn {
+    font-size: 22px;
+  }
+
+  .hero__img::after {
+    top: 12%;
+  }
+
+  .hero__img::before {
+    bottom: 8%;
+  }
+}
+
+@media (max-width: 1300px) {
+  .hero__img::after {
+    top: 8%;
+  }
+
+  .hero__img::before {
+    bottom: 4%;
+  }
+}
+
+@media (max-width: 1200px) {
+  .hero {
+    padding-bottom: 60px;
+  }
+
   .hero__inner {
-    flex-direction: column;
+    justify-content: center;
+  }
+
+  .hero__img {
+    display: none;
   }
 
   .hero__info {
     max-width: none;
   }
-} 
+
+  .hero__tabs {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .hero__tab {
+    font-size: 20px;
+    border-radius: 30px;
+  }
+}
+
+@media (max-width: 1129px) {
+  .hero__info {
+    position: relative;
+  }
+
+  .hero__info::after {
+    content: '';
+    position: absolute;
+    right: 90px;
+    top: 60px;
+    display: inline-block;
+    width: 62px;
+    height: 62px;
+    background: url(../icons/star-2-icon.svg);
+  }
+}
+
+@media (max-width: 980px) {
+  .hero__info::after {
+    display: none;
+  }
+}
+
+@media (max-width: 800px) {
+  .hero__tab {
+    font-size: 18px;
+  }
+}
+
+@media (max-width: 750px) {
+  .hero {
+    padding-top: 122px;
+    padding-bottom: 40px;
+  }
+
+  .hero__inner {
+    margin-bottom: 50px;
+  }
+
+  .hero__title {
+    font-size: 55px;
+    margin-bottom: 30px;
+  }
+
+  .hero__desc {
+    margin-bottom: 30px;
+  }
+
+  .hero__desc-text {
+    font-size: 24px;
+    max-width: 384px;
+  }
+
+  .hero__btn {
+    font-size: 20px;
+  }
+
+  .hero__tabs {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 550px) {
+  .hero {
+    padding-top: 112px;
+    padding-bottom: 30px;
+  }
+
+  .hero__title {
+    font-size: 45px;
+  }
+
+  .hero__desc {
+    gap: 10px;
+  }
+
+  .hero__desc-text {
+    font-size: 20px;
+    max-width: 346px;
+  }
+
+  .hero__desc-icon {
+    width: 62px;
+    height: 62px;
+  }
+
+  .hero__btn {
+    font-size: 18px;
+    height: 62px;
+    padding: 15px 50px;
+  }
+}
+
+@media (max-width: 450px) {
+  .hero__inner {
+    margin-bottom: 40px;
+  }
+  .hero__title {
+    font-size: 40px;
+  }
+
+  .hero__desc-text {
+    font-size: 18px;
+    max-width: 300px;
+  }
+
+  .hero__tab {
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 380px) {
+  .hero__inner {
+    margin-bottom: 30px;
+  }
+
+  .hero__title {
+    font-size: 35px;
+    margin-bottom: 20px;
+  }
+
+  .hero__desc {
+    margin-bottom: 20px;
+  }
+
+  .hero__desc-icon {
+    width: 42px;
+    height: 42px;
+  }
+
+  .hero__desc-text {
+    font-size: 16px;
+    max-width: 256px;
+  }
+
+  .hero__btn {
+    font-size: 16px;
+    height: 52px;
+  }
+
+  .hero__tabs {
+    gap: 10px;
+  }
+
+  .hero__tab {
+    font-size: 14px;
+  }
+}
