--- a/css/media.css
+++ b/css/media.css
@@ -4,6 +4,12 @@
   }
 }
 
+@media (max-width: 1660px) {
+  .hero__img::after {
+    top: 19%;
+  }
+}
+
 @media (max-width: 1650px) {
   .header__nav {
     display: flex;
@@ -22,6 +28,10 @@
     z-index: 10;
     background-color: var(--dark-grey);
     transition: var(--transition);
+  }
+
+  .slide__list {
+    transform: translateX(27px);
   }
 
   .header__nav-list {
@@ -46,6 +56,75 @@
   }
 }
 
+@media (max-width: 1562px) {
+  .swiper-pagination {
+    display: none;
+  }
+}
+
+@media (max-width: 1560px) {
+  .hero__title {
+    font-size: 70px;
+  }
+
+  .hero__desc-text {
+    font-size: 28px;
+    max-width: 485px;
+  }
+
+  .hero__img::after {
+    top: 15%;
+  }
+
+  .hero__img::before {
+    bottom: 12%;
+  }
+
+  .slide {
+    padding: 50px 80px;
+  }
+}
+
+@media (max-width: 1455px) {
+  .hero__tabs {
+    gap: 15px;
+  }
+
+  .hero__tab {
+    font-size: 18px;
+  }
+
+  .hero__btn {
+    font-size: 22px;
+  }
+
+  .hero__img::after {
+    top: 12%;
+  }
+
+  .hero__img::before {
+    bottom: 8%;
+  }
+
+  .footer__copyright {
+    font-size: 26px;
+  }
+
+  .footer__info {
+    font-size: 22px;
+  }
+}
+
+@media (max-width: 1300px) {
+  .hero__img::after {
+    top: 8%;
+  }
+
+  .hero__img::before {
+    bottom: 4%;
+  }
+}
+
 @media (max-width: 1200px) {
   .header__container {
     display: flex;
@@ -62,6 +141,292 @@
   .burger-icon {
     transform: none;
   }
+
+  .hero {
+    padding-bottom: 60px;
+  }
+
+  .hero__inner {
+    justify-content: center;
+  }
+
+  .hero__img {
+    display: none;
+  }
+
+  .hero__info {
+    max-width: none;
+  }
+
+  .hero__tabs {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .hero__tab {
+    font-size: 20px;
+    border-radius: 30px;
+  }
+
+  .steps {
+    padding: 100px 0;
+  }
+
+  .slide__heading {
+    font-size: 40px;
+  }
+
+  .slide__num {
+    gap: 15px;
+  }
+
+  .slide__num span {
+    font-size: 70px;
+  }
+
+  .slide__icon {
+    height: 62px;
+    width: 62px;
+  }
+
+  .slide__title {
+    font-size: 40px;
+  }
+
+  .slide__item,
+  .slide__desc {
+    font-size: 20px;
+  }
+
+  .footer {
+    padding: 60px 0;
+  }
+
+  .footer__copyright {
+    font-size: 22px;
+  }
+
+  .footer__info {
+    font-size: 19px;
+  }
+
+  .footer__item {
+    align-content: center;
+  }
+
+  .footer__item::after {
+    display: none;
+  }
+
+  .footer__list {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+  }
+
+  .footer__item {
+    grid-column: span 2;
+  }
+
+  .footer__item:nth-child(4) {
+    grid-column: 2 / 4;
+  }
+
+  .footer__item:nth-child(5) {
+    grid-column: 4 / 6;
+  }
+}
+
+@media (max-width: 1129px) {
+  .hero__info {
+    position: relative;
+  }
+
+  .hero__info::after {
+    content: '';
+    position: absolute;
+    right: 90px;
+    top: 60px;
+    display: inline-block;
+    width: 62px;
+    height: 62px;
+    background: url(../icons/star-2-icon.svg);
+  }
+}
+
+@media (max-width: 980px) {
+  .hero__info::after {
+    display: none;
+  }
+
+  .slide__heading {
+    font-size: 35px;
+    margin-bottom: 40px;
+  }
+
+  .slide__num {
+    margin-bottom: 24px;
+  }
+
+  .slide__num span {
+    font-size: 60px;
+  }
+
+  .slide__icon {
+    height: 52px;
+    width: 52px;
+  }
+
+  .slide__title {
+    font-size: 35px;
+  }
+
+  .slide__item,
+  .slide__desc {
+    font-size: 18px;
+  }
+
+  .footer__item {
+    font-size: 18px;
+  }
+}
+
+@media (max-width: 800px) {
+  .hero__tab {
+    font-size: 18px;
+  }
+
+  .slide {
+    padding: 30px 60px;
+  }
+
+  .slide__inner {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 40px;
+  }
+
+  .slide__list {
+    width: auto;
+    max-width: none;
+    transform: translateX(21px);
+  }
+
+  .slide__desc, .slide__info {
+    width: 100%;
+    max-width: none;
+  }
+}
+
+@media (max-width: 750px) {
+  .hero {
+    padding-top: 122px;
+    padding-bottom: 40px;
+  }
+
+  .hero__inner {
+    margin-bottom: 50px;
+  }
+
+  .hero__title {
+    font-size: 55px;
+    margin-bottom: 30px;
+  }
+
+  .hero__desc {
+    margin-bottom: 30px;
+  }
+
+  .hero__desc-text {
+    font-size: 24px;
+    max-width: 384px;
+  }
+
+  .hero__btn {
+    font-size: 20px;
+  }
+
+  .hero__tabs {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .steps {
+    padding: 80px 0;
+  }
+
+  .footer {
+    padding: 40px 0;
+  }
+}
+
+@media (max-width: 650px) {
+  .slide__heading,
+  .slide__title {
+    font-size: 30px;
+  }
+
+  .slide__num span {
+    font-size: 50px;
+  }
+
+  .slide__icon {
+    height: 52px;
+    width: 52px;
+  }
+
+  .footer {
+    padding: 40px 0;
+  }
+  .footer__list {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .footer__copyright {
+    font-size: 18px;
+  }
+
+  .footer__info {
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 550px) {
+  .hero {
+    padding-top: 112px;
+    padding-bottom: 30px;
+  }
+
+  .hero__title {
+    font-size: 45px;
+  }
+
+  .hero__desc {
+    gap: 10px;
+  }
+
+  .hero__desc-text {
+    font-size: 20px;
+    max-width: 346px;
+  }
+
+  .hero__desc-icon {
+    width: 62px;
+    height: 62px;
+  }
+
+  .hero__btn {
+    font-size: 18px;
+    height: 62px;
+    padding: 15px 50px;
+  }
+
+  .steps {
+    padding: 70px 0;
+  }
+
+  .slide {
+    padding: 30px 40px;
+  }
 }
 
 @media (max-width: 500px) {
@@ -71,6 +436,55 @@
 
   .header__right--burger .header__right-phone {
     font-size: 22px;
+  }
+
+  .header__nav-list {
+    gap: 40px;
+  }
+}
+
+@media (max-width: 450px) {
+  .hero__inner {
+    margin-bottom: 40px;
+  }
+  .hero__title {
+    font-size: 40px;
+  }
+
+  .hero__desc-text {
+    font-size: 18px;
+    max-width: 300px;
+  }
+
+  .hero__tab {
+    font-size: 16px;
+  }
+
+  .slide__inner {
+    gap: 25px;
+  }
+
+  .slide__num {
+    margin-bottom: 20px;
+    gap: 10px;
+  }
+
+  .slide__heading {
+    margin-bottom: 25px;
+  }
+
+  .slide__heading,
+  .slide__title {
+    font-size: 24px;
+  }
+
+  .slide__item,
+  .slide__desc {
+    font-size: 16px;
+  }
+
+  .footer__list {
+    gap: 30px;
   }
 }
 
@@ -82,5 +496,43 @@
   .header__logo {
     width: 226px;
     height: 63px;
+  }
+}
+
+@media (max-width: 380px) {
+  .hero__inner {
+    margin-bottom: 30px;
+  }
+
+  .hero__title {
+    font-size: 35px;
+    margin-bottom: 20px;
+  }
+
+  .hero__desc {
+    margin-bottom: 20px;
+  }
+
+  .hero__desc-icon {
+    width: 42px;
+    height: 42px;
+  }
+
+  .hero__desc-text {
+    font-size: 16px;
+    max-width: 256px;
+  }
+
+  .hero__btn {
+    font-size: 16px;
+    height: 52px;
+  }
+
+  .hero__tabs {
+    gap: 10px;
+  }
+
+  .hero__tab {
+    font-size: 14px;
   }
 }
