--- a/css/style.css
+++ b/css/style.css
@@ -1,361 +1,6 @@
 @import './global.css';
 @import './header.css';
+@import './hero.css';
+@import './steps.css';
+@import './footer.css';
 @import './media.css';
-
-.hero {
-  padding-top: 142px;
-  margin-top: -82px;
-  background-color: var(--light-grey);
-  border-radius: 0 0 40px 40px;
-}
-
-.hero__inner {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  gap: 50px;
-  margin-bottom: 60px;
-}
-
-.hero__info {
-  max-width: 801px;
-}
-
-.hero__title {
-  font-family: Montserrat, sans-serif;
-  font-size: 80px;
-  font-weight: 700;
-  margin-bottom: 40px;
-}
-
-.hero__title span {
-  color: var(--orange-juice);
-}
-
-.hero__desc {
-  display: flex;
-  align-items: center;
-  gap: 20px;
-  margin-bottom: 40px;
-}
-
-.hero__desc-text {
-  font-family: Inter, sans-serif;
-  font-size: 32px;
-  font-weight: 400;
-  line-height: 120%;
-  max-width: 525px;
-}
-
-.hero__desc-icon {
-  width: 72px;
-  height: 72px;
-}
-
-.hero__btn {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 20px 60px;
-  width: 100%;
-  height: 72px;
-  border-radius: 20px;
-  background: var(--orange-juice);
-  color: var(--white);
-  font-family: Kollektif, sans-serif;
-  font-size: 24px;
-  font-weight: 600;
-  text-transform: uppercase;
-}
-
-.hero__img {
-  position: relative;
-  max-width: 791px;
-  margin-right: 60px;
-}
-
-.hero__img::before {
-  content: '';
-  position: absolute;
-  left: -4%;
-  bottom: 16%;
-  display: inline-block;
-  width: 60px;
-  height: 60px;
-  background: url('../icons/star-1-icon.svg');
-}
-
-.hero__img::after {
-  content: '';
-  position: absolute;
-  top: 21%;
-  right: -4%;
-  display: inline-block;
-  width: 62px;
-  height: 62px;
-  background: url('../icons/star-2-icon.svg');
-}
-
-.hero__img img {
-  width: 100%;
-  height: 100%;
-}
-
-.hero__tabs {
-  display: flex;
-  gap: 20px;
-  justify-content: space-between;
-}
-
-.hero__tab {
-  display: flex;
-  text-align: center;
-  justify-content: center;
-  align-items: center;
-  height: 88px;
-  padding: 0 10px;
-  flex-basis: 280px;
-  flex-shrink: 1;
-  color: var(--grey);
-  font-family: Inter, sans-serif;
-  font-size: 20px;
-  font-weight: 400;
-  line-height: 120%;
-  background-color: var(--white);
-  border-radius: 30px 30px 0 0;
-  white-space: pre-line;
-}
-
-@media (max-width: 1660px) {
-  .hero__img::after {
-    top: 19%;
-  }
-}
-
-@media (max-width: 1560px) {
-  .hero__title {
-    font-size: 70px;
-  }
-
-  .hero__desc-text {
-    font-size: 28px;
-    max-width: 485px;
-  }
-
-  .hero__img::after {
-    top: 15%;
-  }
-
-  .hero__img::before {
-    bottom: 12%;
-  }
-}
-
-@media (max-width: 1455px) {
-  .hero__tabs {
-    gap: 15px;
-  }
-
-  .hero__tab {
-    font-size: 18px;
-  }
-
-  .hero__btn {
-    font-size: 22px;
-  }
-
-  .hero__img::after {
-    top: 12%;
-  }
-
-  .hero__img::before {
-    bottom: 8%;
-  }
-}
-
-@media (max-width: 1300px) {
-  .hero__img::after {
-    top: 8%;
-  }
-
-  .hero__img::before {
-    bottom: 4%;
-  }
-}
-
-@media (max-width: 1200px) {
-  .hero {
-    padding-bottom: 60px;
-  }
-
-  .hero__inner {
-    justify-content: center;
-  }
-
-  .hero__img {
-    display: none;
-  }
-
-  .hero__info {
-    max-width: none;
-  }
-
-  .hero__tabs {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-  }
-
-  .hero__tab {
-    font-size: 20px;
-    border-radius: 30px;
-  }
-}
-
-@media (max-width: 1129px) {
-  .hero__info {
-    position: relative;
-  }
-
-  .hero__info::after {
-    content: '';
-    position: absolute;
-    right: 90px;
-    top: 60px;
-    display: inline-block;
-    width: 62px;
-    height: 62px;
-    background: url(../icons/star-2-icon.svg);
-  }
-}
-
-@media (max-width: 980px) {
-  .hero__info::after {
-    display: none;
-  }
-}
-
-@media (max-width: 800px) {
-  .hero__tab {
-    font-size: 18px;
-  }
-}
-
-@media (max-width: 750px) {
-  .hero {
-    padding-top: 122px;
-    padding-bottom: 40px;
-  }
-
-  .hero__inner {
-    margin-bottom: 50px;
-  }
-
-  .hero__title {
-    font-size: 55px;
-    margin-bottom: 30px;
-  }
-
-  .hero__desc {
-    margin-bottom: 30px;
-  }
-
-  .hero__desc-text {
-    font-size: 24px;
-    max-width: 384px;
-  }
-
-  .hero__btn {
-    font-size: 20px;
-  }
-
-  .hero__tabs {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-
-@media (max-width: 550px) {
-  .hero {
-    padding-top: 112px;
-    padding-bottom: 30px;
-  }
-
-  .hero__title {
-    font-size: 45px;
-  }
-
-  .hero__desc {
-    gap: 10px;
-  }
-
-  .hero__desc-text {
-    font-size: 20px;
-    max-width: 346px;
-  }
-
-  .hero__desc-icon {
-    width: 62px;
-    height: 62px;
-  }
-
-  .hero__btn {
-    font-size: 18px;
-    height: 62px;
-    padding: 15px 50px;
-  }
-}
-
-@media (max-width: 450px) {
-  .hero__inner {
-    margin-bottom: 40px;
-  }
-  .hero__title {
-    font-size: 40px;
-  }
-
-  .hero__desc-text {
-    font-size: 18px;
-    max-width: 300px;
-  }
-
-  .hero__tab {
-    font-size: 16px;
-  }
-}
-
-@media (max-width: 380px) {
-  .hero__inner {
-    margin-bottom: 30px;
-  }
-
-  .hero__title {
-    font-size: 35px;
-    margin-bottom: 20px;
-  }
-
-  .hero__desc {
-    margin-bottom: 20px;
-  }
-
-  .hero__desc-icon {
-    width: 42px;
-    height: 42px;
-  }
-
-  .hero__desc-text {
-    font-size: 16px;
-    max-width: 256px;
-  }
-
-  .hero__btn {
-    font-size: 16px;
-    height: 52px;
-  }
-
-  .hero__tabs {
-    gap: 10px;
-  }
-
-  .hero__tab {
-    font-size: 14px;
-  }
-}
